Add file download documentation